--- a/HesyRa/app/src/main/res/layout/activity_main.xml
+++ b/HesyRa/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,88 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="70dp"
+    android:layout_marginTop="30dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/fname"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:inputType="textPersonName"
+        android:text="First Name"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal" />
 
+    <EditText
+        android:id="@+id/lname"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:inputType="textPersonName"
+        android:text="Last Name"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/fname" />
+
+    <EditText
+        android:id="@+id/idno"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:inputType="textPersonName"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal"
+        android:text="ID"
+        android:layout_below="@id/lname" />
+
+    <EditText
+        android:id="@+id/mail"
+        android:layout_below="@id/idno"
+        android:inputType="textEmailAddress"
+        android:text="Email"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal" />
+
+    <EditText
+        android:id="@+id/pword"
+        android:layout_below="@id/mail"
+        android:inputType="textPassword"
+        android:text="Password"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal"/>
+
+    <EditText
+        android:id="@+id/phoneno"
+        android:layout_below="@id/pword"
+        android:inputType="phone"
+        android:text="Phone"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/reg"
+        android:layout_below="@id/phoneno"
+        android:text="REGISTER"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:inputType="textPersonName"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/log"
+        android:layout_below="@id/reg"
+        android:text="LOGIN"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal" />
+</RelativeLayout>
 </android.support.constraint.ConstraintLayout>
